--- a/todo/style.css
+++ b/todo/style.css
@@ -1,26 +1,26 @@
 body {
-    background-color: black!important 
+    background-color: black!important
 }
 .container {
     margin-top: 50px;
     width: 50%!important;
 }
-form { 
+.frame {
     background: darkgrey;
     border: 3px solid #363636;
     border-radius: 11px;
     padding: 20px 10px;
 }
     #list --> id="list";
-#list { 
+#list {
     width: 60%;
     float: left;
     margin-right: 5%;
 }
-h1 { 
+h1 {
     color: #d9d9d9;
-} 
-ul { 
+}
+ul {
     padding: 0 10px;
 }
 ul li {
